# master-library

./: .gitignore  LICENSE  README.md
docs/plans/: 2026-06-07-airtable-control-plane.md  2026-06-07-ingestion-publication-pipeline.md
docs/review/: 20260614.md
docs/specs/: 2026-06-07-airtable-control-plane-design.md  2026-06-07-ingestion-publication-pipeline-design.md
workers/ingestion/: .gitignore  pyproject.toml  wrangler.toml
workers/ingestion/src/: airtable_client.py  config.py  eligibility.py  entry.py  handoff.py  publication_flow.py  reconciliation_job.py  stream_client.py  trigger_job.py  webhook_handler.py
workers/ingestion/src/domain/: video_record.py  video_state.py
workers/ingestion/src/lib/: idempotency.py  operator_errors.py
workers/ingestion/tests/: conftest.py  test_airtable_client.py  test_config.py  test_eligibility.py  test_entrypoint.py  test_handoff.py  test_publication_flow.py  test_reconciliation_job.py  test_stream_client.py  test_video_record.py  test_video_state.py  test_webhook_handler.py
