[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "master-library-ingestion-worker"
version = "0.1.0"
description = "Cloudflare Python Worker for Master Library ingestion"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "workers-py",
  "workers-runtime-sdk",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = [".", "runtime_shims"]
include = ["src*", "_cloudflare_compat_flags", "_pyodide_entrypoint_helper", "js"]
namespaces = true

[tool.pytest.ini_options]
pythonpath = ["."]
